--- a/vidly/Views/Movies/Random.cshtml
+++ b/vidly/Views/Movies/Random.cshtml
@@ -1,8 +1,35 @@
-﻿@model vidly.Models.Movie
+﻿@model vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+
+@{ 
+    var className = Model.Customers.Count > 4 ? "popular" : null;
+}
+
+
+@*
+    the class id added only if className is not null
+    
+*@
+<h2 class="@className">@Model.Movie.Name</h2>
+
+
+
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie before</p>
+}
+else
+{
+    <ul>
+        @foreach (var customer in Model.Customers)
+        {
+            <li>@customer.Name</li>
+        }
+    </ul>
+}
+
 
