imported solution exercise 2

--- a/vidly/Views/Manage/ChangePassword.cshtml
+++ b/vidly/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model vidly.Models.ChangePasswordViewModel
+﻿@model Vidly.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
