--- a/vidly/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/vidly/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model vidly.Models.VerifyPhoneNumberViewModel
+﻿@model Vidly.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
