--- a/vidly/Views/Account/ResetPassword.cshtml
+++ b/vidly/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model vidly.Models.ResetPasswordViewModel
+﻿@model Vidly.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
