--- a/vidly/Views/Manage/AddPhoneNumber.cshtml
+++ b/vidly/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model vidly.Models.AddPhoneNumberViewModel
+﻿@model Vidly.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
