--- a/vidly/Views/Movies/Random.cshtml
+++ b/vidly/Views/Movies/Random.cshtml
@@ -1,26 +1,24 @@
-﻿@model vidly.ViewModels.RandomMovieViewModel
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    This is a comment
+    On multiple lines    
+*@
 
-@{ 
-    var className = Model.Customers.Count > 4 ? "popular" : null;
+
+@{
+    var className = Model.Customers.Count > 0 ? "popular" : null;
 }
 
-
-@*
-    the class id added only if className is not null
-    
-*@
 <h2 class="@className">@Model.Movie.Name</h2>
-
-
 
 @if (Model.Customers.Count == 0)
 {
-    <p>No one has rented this movie before</p>
+    <text>No one has rented this movie before.</text>
 }
 else
 {
@@ -31,5 +29,4 @@ else
         }
     </ul>
 }
-
 
