--- a/vidly/Views/Shared/_NavBar.cshtml
+++ b/vidly/Views/Shared/_NavBar.cshtml
@@ -7,14 +7,11 @@
                 <span class="icon-bar"></span>
             </button>
             @Html.ActionLink("Vidly", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            @Html.ActionLink("Movies", "GetMovies", "Movies", new { area = "" }, new { @class = "navbar-brand" })
-            @Html.ActionLink("Customers", "Index", "Customers", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
