--- a/vidly/Views/Customers/Index.cshtml
+++ b/vidly/Views/Customers/Index.cshtml
@@ -34,7 +34,7 @@ else
             {
                 <tr>
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.Discountrate%</td>
+                    <td>@customer.MembershipType.Name</td>
                 </tr>
             }
         </tbody>
