added details action in movie controller and the view associated

--- a/vidly/Views/Movies/Index.cshtml
+++ b/vidly/Views/Movies/Index.cshtml
@@ -15,9 +15,10 @@
     <tbody>
         @foreach (var movie in Model)
         {
-            <tr>
-                <td>@movie.Name</td>
-            </tr>
+        <tr>
+            <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+            <td>@movie.MovieGenre.Name</td>
+        </tr>
         }
     </tbody>
 </table>
