correct typo in costumer details view

--- a/vidly/Views/Customers/Details.cshtml
+++ b/vidly/Views/Customers/Details.cshtml
@@ -10,7 +10,7 @@
 <ul>
     <li>Membership Type: @Model.MembershipType.Name</li>
     @if(@Model.Birthdate != null){
-        <li>Membership Type: @Model.Birthdate</li>
+        <li>Birthdate: @Model.Birthdate</li>
     }
 
 </ul>
