change all vidly to Vidly (namespace and import and so on)

--- a/vidly/Views/Customers/New.cshtml
+++ b/vidly/Views/Customers/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model vidly.ViewModels.NewCustomerViewModel
+﻿@model Vidly.ViewModels.NewCustomerViewModel
 @{
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
